增加消息处理上下文对象封装